chore(로그인) : 주석 추가 및 코드 정렬